--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
     <script src="~/js/jquery.fancybox.min.js"></script>
     <script src="~/js/jquery.sticky.js"></script>
     <script src="~/js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
+    <script src="~/js/js_tela_loja.js"></script>
 
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" id="home-section">
@@ -135,7 +137,7 @@
         </footer>
     </div> <!-- .site-wrap -->
 
-
+    <script src="~/js/js_tela_loja.js"></script>
     <script src="~/js/main.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
