--- a/ProjetoPET/Views/Lojas/Create.cshtml
+++ b/ProjetoPET/Views/Lojas/Create.cshtml
@@ -10,7 +10,7 @@
 <form enctype="multipart/form-data" asp-action="Create" class="col-md-12">
     <div class="row">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group col-md-12" s>
+        <div class="form-group col-md-12">
             <label asp-for="NomeLoja" class="control-label"></label>
             <input asp-for="NomeLoja" class="form-control" />
             <span asp-validation-for="NomeLoja" class="text-danger"></span>
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group col-md-6">
             <label asp-for="CNPj" class="control-label"></label>
-            <input asp-for="CNPj" class="form-control" />
+            <input asp-for="CNPj" class="form-control cnpj" />
             <span asp-validation-for="CNPj" class="text-danger"></span>
         </div>
         <div class="form-group col-md-10">
@@ -48,7 +48,7 @@
         </div>
         <div class="form-group col-md-4">
             <label asp-for="CEP" class="control-label"></label>
-            <input asp-for="CEP" class="form-control" />
+            <input asp-for="CEP" class="form-control cep" />
             <span asp-validation-for="CEP" class="text-danger"></span>
         </div>
         <div class="form-group col-md-4">
@@ -64,7 +64,7 @@
         </div>
         <div class="form-group col-md-5">
             <label asp-for="Telefone" class="control-label"></label>
-            <input asp-for="Telefone" class="form-control" />
+            <input asp-for="Telefone" class="form-control ddd_tel" />
             <span asp-validation-for="Telefone" class="text-danger"></span>
         </div>
         <div class="form-group col-md-7" accesskey="">
@@ -74,10 +74,11 @@
         </div>
         <div class="form-group col-md-12">
             <label asp-for="Photo" class="control-label"></label>
-            <input asp-for="Photo" class="banana form-control" id="Photo" name="Photo" type="file" accept="image/png, image/jpeg" onsubmit="Checkfiles(this)" />
+            <div class="custom-file">
+                <input asp-for="Photo" id="Photo" name="Photo" type="file" class="custom-file-input" accept="image/png, image/jpeg" onsubmit="Checkfiles(this)">
+                <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+            </div>
         </div>
-
-
     </div>
     <div class="row float-right">
         <input type="submit" value="Cadastrar" class="btn btn-primary" />
@@ -87,40 +88,9 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script>
-
-        $("#EstadoId").on("change", function () {
-            $list = $("#CidadeId");
-            $.ajax({
-                url: "GetCidades/" + $("#EstadoId").val(),
-                type: "GET",
-                success: function (result) {
-
-                    $list.empty();
-                    result.forEach((item) => {
-                        $list.append('<option value="' + item.id + '"> ' + item.nome + ' </option>');
-                    });
-                },
-                error: function () {
-                    alert("Erro ocorreu no processamento");
-                }
-            });
-
-        });
-
-        function Checkfiles() {
-            var fup = document.getElementById('filename');
-            var fileName = fup.value;
-            var ext = fileName.substring(fileName.lastIndexOf('.') + 1);
-
-            if (ext == "jpeg" || ext == "png") {
-                return true;
-            }
-            else {
-                return false;
-            }
-        }
-    </script>
+<script>
+    
+</script>
 
 
 
