--- a/ProjetoPET/Views/Lojas/Edit.cshtml
+++ b/ProjetoPET/Views/Lojas/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 
 
-<form asp-action="Edit">
+<form enctype="multipart/form-data"  asp-action="Edit">
     <div class="form-row">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group col-md-12">
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group col-md-6">
             <label asp-for="CNPj" class="control-label"></label>
-            <input asp-for="CNPj" class="form-control" />
+            <input asp-for="CNPj" class="form-control cnpj" />
             <span asp-validation-for="CNPj" class="text-danger"></span>
         </div>
         <div class="form-group col-md-10">
@@ -50,22 +50,22 @@
         </div>
         <div class="form-group col-md-4">
             <label asp-for="CEP" class="control-label"></label>
-            <input asp-for="CEP" class="form-control" />
+            <input asp-for="CEP" class="form-control cep" />
             <span asp-validation-for="CEP" class="text-danger"></span>
         </div>
         <div class="form-group col-md-4">
-            <label asp-for="EstadoId" class="control-label"></label>
-            <input asp-for="EstadoId" class="form-control" />
+            <label asp-for="EstadoId" class="control-label" ></label>
+            <select asp-for="EstadoId" class="form-control" id="EstadoId" asp-items="ViewBag.EstadoId"></select>
             <span asp-validation-for="EstadoId" class="text-danger"></span>
         </div>
         <div class="form-group col-md-4">
             <label asp-for="CidadeId" class="control-label"></label>
-            <input asp-for="CidadeId" class="form-control" />
+            <select asp-for="CidadeId" class="form-control" id="CidadeId" asp-items="ViewBag.CidadeId"></select>
             <span asp-validation-for="CidadeId" class="text-danger"></span>
         </div>
         <div class="form-group col-md-5">
             <label asp-for="Telefone" class="control-label"></label>
-            <input asp-for="Telefone" class="form-control" />
+            <input asp-for="Telefone" class="form-control ddd_tel" />
             <span asp-validation-for="Telefone" class="text-danger"></span>
         </div>
         <div class="form-group col-md-7">
@@ -80,15 +80,15 @@
         </div>
         <input type="hidden" asp-for="Id" />
         @*<div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedData" class="control-label"></label>
-                <input asp-for="UpdatedData" class="form-control" />
-                <span asp-validation-for="UpdatedData" class="text-danger"></span>
-            </div>*@
+            <label asp-for="CreatedDate" class="control-label"></label>
+            <input asp-for="CreatedDate" class="form-control" />
+            <span asp-validation-for="CreatedDate" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="UpdatedData" class="control-label"></label>
+            <input asp-for="UpdatedData" class="form-control" />
+            <span asp-validation-for="UpdatedData" class="text-danger"></span>
+        </div>*@
         <div class="form-group">
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
@@ -103,4 +103,37 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+<script>
+
+    $("#EstadoId").on("change", function () {
+        $list = $("#CidadeId");
+        $.ajax({
+            url: "GetCidades/" + $("#EstadoId").val(),
+            type: "GET",
+            success: function (result) {
+
+                $list.empty();
+                result.forEach((item) => {
+                    $list.append('<option value="' + item.id + '"> ' + item.nome + ' </option>');
+                });
+            },
+            error: function () {
+                alert("Erro ocorreu no processamento");
+            }
+        });
+    });
+
+    function Checkfiles() {
+        var fup = document.getElementById('filename');
+        var fileName = fup.value;
+        var ext = fileName.substring(fileName.lastIndexOf('.') + 1);
+
+        if (ext == "jpeg" || ext == "png") {
+            return true;
+        }
+        else {
+            return false;
+        }
+    }
+</script>
 }
