--- a/ProjetoPET/Views/Shared/_LayoutTour.cshtml
+++ b/ProjetoPET/Views/Shared/_LayoutTour.cshtml
@@ -64,7 +64,7 @@
                                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Pet" asp-action="Index">Cadastre seu PeT</a></li>
                                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Evento" asp-action="Index">Eventos</a></li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="" asp-controller="Lojas" asp-action="Index">Lojas</a>
+                                    <a class="nav-link" asp-area="" asp-controller="Loja" asp-action="Index">Lojas</a>
                                 </li>
 
                                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Anuncio" asp-action="Index">Anúncio</a></li>
