--- a/ProjetoPET/Views/Pet/Create.cshtml
+++ b/ProjetoPET/Views/Pet/Create.cshtml
@@ -19,7 +19,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Raca" class="control-label"></label>
-                <input asp-for="Raca" class="form-control" />
+                <select name="Raca" class="form-control valid"id="Raca"aria-invalid="false"
+                 aria-describedby="Raca-erroe"data-val="true">
+                    <option value="Vira-lata">Vira lata</option>
+                    <option value="Pitbul">Pitbul</option>
+                </select>
                 <span asp-validation-for="Raca" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -29,7 +33,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Sexo" class="control-label"></label>
-                <input asp-for="Sexo" class="form-control" />
+                <select name="Sexo" class="form-control valid" id="Sexo" aria-invalid="false"
+                        aria-describedby="Sexo-error" data-val="true">
+                    <option value="Feminino">Feminino</option>
+                    <option value="Masculino">Masculino</option>
+                </select>
                 <span asp-validation-for="Sexo" class="text-danger"></span>
             </div>
             <div class="form-group">
