--- a/ProjetoPET/Views/Shared/_LayoutTour.cshtml
+++ b/ProjetoPET/Views/Shared/_LayoutTour.cshtml
@@ -61,8 +61,10 @@
                                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Pet" asp-action="Index">Cadastre seu PeT</a></li>
                                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Evento" asp-action="Index">Eventos</a></li>
+                                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="" asp-action="Index">Análise de Reação</a></li>
                                 <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Lojas" asp-action="Index">Lojas</a></li>
+                                    <a class="nav-link" asp-area="" asp-controller="Lojas" asp-action="Index">Lojas</a>
+                                </li>
 
                                 <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Anuncio" asp-action="Index">Anúncio</a></li>
                                 @await Html.PartialAsync("_LoginPartial")
