--- a/ProjetoPET/Views/Home/Index.cshtml
+++ b/ProjetoPET/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-lg-6 text-center heading-section mb-5">
 
-                <h2 class="text-black mb-2">Bem-Vindo ao nosso ponto de encontro</h2>
+                <h2 class="text-black mb-2" style="border:2px solid PowderBlue">Bem-Vindo ao nosso ponto de encontro</h2>
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
         </div>
@@ -87,10 +87,11 @@
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-lg-6 text-center heading-section mb-5">
 
-                <h2 class="text-black mb-2">Perguntas mais frequentes</h2>
+                <h2 class="text-black mb-2" style="border:2px solid PowderBlue">Perguntas mais frequentes</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit facere quia quas quod at, reprehenderit eaque nam.</p>
             </div>
         </div>
+    
         <div class="row accordion justify-content-center block__76208">
             <div class="col-lg-6 order-lg-1 mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="">
                 <img src="images/dog_5.jpg" alt="Image" class="img-fluid rounded">
@@ -98,9 +99,9 @@
             <div class="col-lg-5 ml-auto order-lg-2 align-self-center" data-aos="fade-up" data-aos-delay="100">
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseFive" role="button" aria-expanded="true" aria-controls="collapseFive">Lorem ipsum dolor sit amet<span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseFive" role="button" aria-expanded="true" aria-controls="collapseFive" style="color:#567876">Lorem ipsum dolor sit amet<span class="icon"></span></a>
                     </h3>
-                    <div id="collapseFive" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div id="collapseFive" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion" style="background-color:lightblue; color:#567876">
                         <div class="body-text">
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum ipsum autem minima repellat, corrupti consequuntur sit amet atque, optio provident harum eius numquam dolores quam dolore quas! Quisquam, velit accusantium?</p>
                         </div>
@@ -108,9 +109,9 @@
                 </div> <!-- .accordion-item -->
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, voluptas. <span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix" style="color:#567876">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, voluptas. <span class="icon"></span></a>
                     </h3>
-                    <div id="collapseSix" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div id="collapseSix" class="collapse" aria-labelledby="headingOne" data-parent="#accordion"style=" background-color:lightblue; color:#567876">
                         <div class="body-text">
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui doloremque magnam ea, fuga deserunt dolor, atque ex libero aspernatur nobis nisi soluta nulla vitae natus omnis! Inventore beatae amet autem?</p>
                         </div>
@@ -118,9 +119,9 @@
                 </div> <!-- .accordion-item -->
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven" style="color:#567876">Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="icon"></span></a>
                     </h3>
-                    <div id="collapseSeven" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div id="collapseSeven" class="collapse" aria-labelledby="headingOne" data-parent="#accordion" style="background-color:lightblue; color:#567876">
                         <div class="body-text">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, aspernatur exercitationem consequatur soluta vero error autem nemo cum! Consequatur illo voluptatum eos labore corrupti animi odio accusamus perferendis? Eveniet, odit.</p>
                         </div>
@@ -128,9 +129,9 @@
                 </div> <!-- .accordion-item -->
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseEight" role="button" aria-expanded="false" aria-controls="collapseEight">consectetur, adipisicing elit?<span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseEight" role="button" aria-expanded="false" aria-controls="collapseEight" style="color:#567876">consectetur, adipisicing elit?<span class="icon"></span></a>
                     </h3>
-                    <div id="collapseEight" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div id="collapseEight" class="collapse" aria-labelledby="headingOne" data-parent="#accordion" style="background-color:lightblue; color:#567876">
                         <div class="body-text">
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore dolorem aliquam commodi magni. Animi harum voluptates odio asperiores, atque tenetur eveniet itaque pariatur ut. Est quas ducimus architecto?</p>
                         </div>
