--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -83,10 +83,10 @@
                         <div class="row">
                             <div class="col-md-5">
                                 <h2 class="footer-heading mb-4">Sobre nós</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+                                <p>Somos um projeto sem fins lucrativos com o intuito de auxiliar pets e seus donos** </p>
                             </div>
                             <div class="col-md-3 ml-auto">
-                                <h2 class="footer-heading mb-4">Quick Links</h2>
+                                <h2 class="footer-heading mb-4">Links úteis</h2>
                                 <ul class="list-unstyled">
                                     <li><a href="#about-section" class="smoothscroll">Sobre Nós</a></li>
                                     <li><a href="#trainers-section" class="smoothscroll">Veterinários</a></li>
