--- a/ProjetoPET/Views/Pet/Delete.cshtml
+++ b/ProjetoPET/Views/Pet/Delete.cshtml
@@ -6,11 +6,11 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Deseja realmente excluir esse item?</h3>
 <div>
-    <h4>Pet</h4>
+    @*<h4>Pet</h4>*@
     <hr />
-    <dl class="dl-horizontal">
+    @*<dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
@@ -59,7 +59,7 @@
         <dd>
             @Html.DisplayFor(model => model.UpdatedData)
         </dd>
-    </dl>
+    </dl>*@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
