Finalizando maps e BancoContext

--- a/ProjetoPET/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoPET/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using ProjetoPET.Areas.Identity.Data
+@using Domain.Model
 @inject SignInManager<Usuario> SignInManager
 @inject UserManager<Usuario> UserManager
 
