--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     <div class="col-6 col-xl-2">
                         <h1 class="mb-0 site-logo"><a class="h2 mb-0"><strong>Projeto</strong>PET<span class="text-primary">.</span> </a></h1>
                     </div>
-                    <div class="col-12 col-md-10 d-none d-xl-block">
+                    @*<div class="col-12 col-md-10 d-none d-xl-block">
                         <nav class="site-navigation position-relative text-right" role="navigation">
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
@@ -67,7 +67,7 @@
                                 <li><a href="#contact-section" class="nav-link">Contato</a></li>
                             </ul>
                         </nav>
-                    </div>
+                    </div>*@
 
                     <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a></div>
                 </div>
